# electronics-shop-project

./: README.md  exceptions.py  pyproject.toml
src/: instantiate_csv_error.py  item.py  keyboard.py  phone.py
task-1/: README.md
task-2/: README.md  main.py
task-3/: README.md
task-4/: README.md
task-5/: README.md
task-6/: README.md
tests/: conftest.py  test_item.py  test_keyboard.py  test_phone.py
